🗃️ Expand apache-kafka guide and refresh META.json 🗃️
- README.md: add ~3,000 lines of installation, configuration,
operations, and troubleshooting content for Apache Kafka.
- META.json: refresh tags / metadata.

META.json
README.md